--- a/public/main.css
+++ b/public/main.css
@@ -2,11 +2,23 @@ body {
   margin: 0;
 }
 
+.search {
+  margin-left: 20px;
+  padding: 5px;
+}
+.search-send {
+  padding: 6px 10px;
+  background: lightgray;
+  border: none;
+  border-radius: 5px;
+  vertical-align: middle;
+}
+
 .nav {
   display: flex;
   padding: 15px;
   align-items: center;
-  background: white;
+  /* background: white; */
 }
 
 .nav a {
